# blackened

./: .cvsignore  .gitignore  BLACKENED.README  Blackened.ChangeLog  INSTALL  Makefile.in  README  README.md  acconfig.h  blackened-supfile  bsdinstall.in  configure  configure.in  easyinst  makehelp  mkinstalldirs  qnx.patch
doc/: .cvsignore  BUGS  BUGS_IRC  COMSTUD.README  ChangeLog  Copyright  HISTORY  INSTALL-2.2  NEWS  New2.2  README-2.2  SecureIRC  VERSIONS  blackened.1.in  cs_todo  example_menu  ircII.Copyright  ircserv  test-suid.c  todo
include/: alias.h  autoop.h  cignore.h  comstud.h  config.h  crypt.h  ctcp.h  dcc.h  debug.h  defs.h.in  edit.h  exec.h  fileio.h  flood.h  format.h  funny.h  help.h  history.h  hold.h  hook.h  if.h  ignore.h  input.h  irc.h  irc_std.h  ircaux.h  keys.h  lastlog.h  list.h  log.h  mail.h  menu.h  names.h  notify.h  numbers.h  output.h  parse.h  queue.h  recorder.h  reg.h  (+12 more)
lib/: help.blackened  ircII.servers  reasons
lib/help/: !  #  .date  :  abort  admin  assign  autoop  away  b  ban  bancount  basics  beep  bye  c  cd  channel  chat  cignore  clear  commands  comment  connect  copyright  cstat  ctcc  cycle  date  deop  deoper  describe  devoice  die  digraph  disconnect  dline  dmsg  echo  encrypt  (+156 more)
lib/help/alias/: alias  functions  quote  special  width
lib/help/bind/: auto_msg  backspace  backward_character  backward_history  backward_word  beginning_of_line  bind  clear_screen  command_completion  delete_character  delete_next_word  delete_previous_word  end_of_line  enter_digraph  enter_menu  erase_line  erase_to_beg_of_line  erase_to_end_of_line  examples  forward_character  forward_history  forward_word  grow_window  help_character  hide_window  keys  kill_window  list_windows  meta1_character  meta2_character  meta3_character  meta4_character  new_window  next_window  nothing  page_down  page_up  parse_command  previous_window  quit_irc  (+17 more)
lib/help/ctcp/: action  clientinfo  ctcp  echo  finger  ping  time  userinfo  utc  version
lib/help/dcc/: chat  close  dcc  get  list  raw  rename  send  talk  tmsg
lib/help/format/: action  action_other  dcc_chat  dcc_chat_action  dcc_talk  format  gone  invite  join  join_self  kick  kick_self  kill  mode  msg  msg_group  nick  notice  notify_signoff  notify_signon  notify_signon_userhost  numeric  part  part_self  public  public_action  public_msg  public_other  quit  recorder_body  recorder_head  send_action  send_dcc_chat  send_dcc_talk  send_locops  send_msg  send_notice  send_operwall  send_public  send_public_action  (+20 more)
lib/help/functions/: after  ascii  before  center  chanusers  chr  cluster  clusterhost  connect  curpos  decode  encode  fclose  feof  fgetc  fopen  format  fputc  fread  freadln  fseek  ftell  functions  fwrite  fwriteln  getkey  idle  index  irsort  isalpha  ischannel  ischanop  isdigit  isort  jot  left  length  lformat  listen  match  (+43 more)
lib/help/ircii/: ircii  newuser
lib/help/load/: 2.9script  action  alias  autoop  basical  bigcheese  brc  channel  columns  commander  cursor  dccchan  deutsch  disc  edit  english  events  extensions  finger  finger.who  flood  fnet  functions  help  history  irciihelp  ircprimer  kickmenu  killpath  kpstat  list  load  local  lynx_ircrc  meta1  meta2  msg  mudlike  nemesis  netsplit  (+22 more)
lib/help/note/: antiwall  count  deny  find  flag  key  log  ls  news  note  rm  save  send  sent  service  spy  stats  user  waitfor  wall  wallops
lib/help/on/: action  channel_nick  channel_signoff  connect  ctcp  ctcp_reply  dcc_chat  dcc_raw  disconnect  exec  exec_errors  exec_exit  exec_prompt  flood  help  hook  idle  input  invite  join  kick  leave  list  mail  mode  msg  msg_group  names  nickname  note  notice  notify_signoff  notify_signon  numeric  on  public  public_msg  public_notice  public_other  raw_irc  (+17 more)
lib/help/set/: always_split_biggest  auto_nslookup  auto_rejoin  auto_reoper  auto_unmark_away  auto_whowas  autoop_delay  autoop_enable  away_recorder  ban_timeout  banner  beep  beep_max  beep_on_msg  beep_when_away  bold_video  channel_name_width  client_information  clock  clock_24hour  clock_alarm  cmdchars  command_mode  continued_line  dcc_block_size  debug  default_reason  display  eight_bit_characters  encrypt_program  exec_protection  fake_host  filter_log  flood_after  flood_rate  flood_users  flood_warning  full_status_line  help_file  help_pager  (+121 more)
lib/help/window/: add  addgroup  back  balance  channel  create  delete  delgroup  double  goto  grow  hide  hide_others  hold_mode  kill  kill_others  lastlog_level  level  list  log  logfile  move  name  new  next  notify  notify_level  number  pop  previous  prompt  push  refnum  remove  scroll  server  show  shrink  stack  sticky  (+2 more)
lib/script/: action  alias  basical  bigcheese  brc  channel  commander  compl.mods  complete  cursor  deutsch  disc  dmsg  edit  english  flood  global  history  history-match  imap  ircIIhelp  ircprimer  ircrc  kickmenu  list  log  lynx_ircrc  msg  mudlike  netsplit  newformat  nicks  oper  repeat  service  shell  smileys  time  traces  troy  (+3 more)
lib/translation/: CP850
source/: .cvsignore  Makefile.in  alias.c  autoop.c  cignore.c  comstud.c  crypt.c  ctcp.c  dcc.c  debug.c  edit.c  exec.c  file.c  fileio.c  flood.c  format.c  funny.c  gzip.h  help.c  history.c  hold.c  hook.c  if.c  ignore.c  input.c  irc.c  ircaux.c  ircflush.c  ircserv.c  ircsig.c  keys.c  lastlog.c  list.c  log.c  mail.c  menu.c  names.c  newio.c  notice.c  notify.c  (+19 more)
